--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
   width: 100%;
   background-color: black;
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family:'Comforter Brush', cursive;
 }
 
 /* task 11: add flexbox to the div with a class named navBar.*/
